honey-web/honey-web.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app-web-v1
  namespace: my-app-web
  labels:
    app: my-app-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-app-web
  template:
    metadata:
      labels:
        app: my-app-web
    spec:
      containers:
        - name: nginx-1
          imagePullPolicy: IfNotPresent
          image: rembun/devops:honey-web
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: dockerhub-argocd
