honey-web/service-honey-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-honey-web
  namespace: my-app-web
spec:
  type: ClusterIP
  selector:
    app: my-app-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
